--- a/popup.html
+++ b/popup.html
@@ -332,6 +332,54 @@
     ::-webkit-scrollbar-thumb:hover {
       background: rgba(102, 126, 234, 0.5);
     }
+
+    .char-animation {
+      display: inline-block;
+      opacity: 0;
+      animation: charFadeIn 0.1s ease forwards;
+    }
+
+    @keyframes charFadeIn {
+      to {
+        opacity: 1;
+      }
+    }
+
+    .loading-dots {
+      display: inline-block;
+    }
+
+    .loading-dots::after {
+      content: '';
+      animation: loadingDots 1.5s infinite;
+    }
+
+    @keyframes loadingDots {
+      0%, 20% { content: ''; }
+      40% { content: '.'; }
+      60% { content: '..'; }
+      80%, 100% { content: '...'; }
+    }
+
+    .success-pulse {
+      animation: successPulse 0.6s ease;
+    }
+
+    @keyframes successPulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+
+    .error-shake {
+      animation: errorShake 0.5s ease;
+    }
+
+    @keyframes errorShake {
+      0%, 100% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      75% { transform: translateX(5px); }
+    }
   </style>
 </head>
 <body>
