--- a/popup.html
+++ b/popup.html
@@ -383,7 +383,7 @@
   </style>
 </head>
 <body>
-  <div class="header draggable-header" id="draggableHeader">
+  <div class="header">
     <div class="logo">
       <svg viewBox="0 0 24 24" fill="currentColor">
         <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
@@ -391,11 +391,6 @@
     </div>
     <h1>AI Screen Assistant</h1>
     <p>Your intelligent screen companion</p>
-    <div class="drag-handle" id="dragHandle" title="Drag to move window">
-      <svg viewBox="0 0 24 24" fill="currentColor">
-        <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
-      </svg>
-    </div>
   </div>
 
   <div class="container">
