--- a/popup.html
+++ b/popup.html
@@ -380,6 +380,79 @@
       25% { transform: translateX(-5px); }
       75% { transform: translateX(5px); }
     }
+
+    .slide-out-left {
+      animation: slideOutLeft 0.3s ease forwards;
+    }
+
+    @keyframes slideOutLeft {
+      to {
+        opacity: 0;
+        transform: translateX(-50px);
+      }
+    }
+
+    .slide-out-right {
+      animation: slideOutRight 0.3s ease forwards;
+    }
+
+    @keyframes slideOutRight {
+      to {
+        opacity: 0;
+        transform: translateX(50px);
+      }
+    }
+
+    .fade-out {
+      animation: fadeOut 0.3s ease forwards;
+    }
+
+    @keyframes fadeOut {
+      to {
+        opacity: 0;
+        transform: translateY(-10px);
+      }
+    }
+
+    /* Configuration section styles */
+    .config-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 12px;
+      margin-bottom: 12px;
+    }
+
+    .config-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 12px;
+      background: rgba(255, 255, 255, 0.5);
+      border-radius: 8px;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+    }
+
+    .config-label {
+      font-size: 12px;
+      color: #64748b;
+      margin-bottom: 4px;
+      font-weight: 500;
+    }
+
+    .config-value {
+      font-size: 16px;
+      font-weight: 600;
+      color: #1e293b;
+    }
+
+    .config-description {
+      font-size: 14px;
+      color: #475569;
+      margin-top: 8px;
+      text-align: center;
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
@@ -496,7 +569,7 @@
   </div>
 
   <div class="footer">
-    <p>AI Screen Assistant v1.9 • Powered by OpenRouter</p>
+    <p>AI Screen Assistant v1.12 • Powered by OpenRouter</p>
   </div>
 
   <script src="popup.js"></script>
