--- a/popup.html
+++ b/popup.html
@@ -453,6 +453,23 @@
       text-align: center;
       font-style: italic;
     }
+
+    .system-controlled {
+      color: #667eea !important;
+      font-weight: 700 !important;
+    }
+
+    .system-note {
+      font-size: 12px;
+      color: #64748b;
+      margin-top: 12px;
+      text-align: center;
+      font-style: italic;
+      background: rgba(102, 126, 234, 0.1);
+      padding: 8px 12px;
+      border-radius: 6px;
+      border: 1px solid rgba(102, 126, 234, 0.2);
+    }
   </style>
 </head>
 <body>
