--- a/popup.html
+++ b/popup.html
@@ -333,6 +333,10 @@
       background: rgba(102, 126, 234, 0.5);
     }
 
+    .text-reveal {
+      overflow: hidden;
+    }
+
     .char-animation {
       display: inline-block;
       opacity: 0;
